Predictor demo app

--- a/forex/src/main/resources/application.properties
+++ b/forex/src/main/resources/application.properties
@@ -11,5 +11,5 @@ forex.function=CURRENCY_EXCHANGE_RATE
 forex.from-currency=EUR
 forex.to-currency=PLN
 forex.api-key=Y3JT1TZCEL280RRZ
-scheduler.cron=* */15 * * * ?
+scheduler.cron=0 0 * * * ?
 server.port=8082
