--- a/weather/src/main/resources/application.properties
+++ b/weather/src/main/resources/application.properties
@@ -13,7 +13,7 @@ weather.city=Warsaw
 weather.days=1
 weatherapi.url=http://api.weatherapi.com/v1/current.json?
 
-scheduler.cron=* */15 * * * ?
+scheduler.cron=0 0 * * * ?
 
 server.shutdown=graceful
 server.port=8081
